--- a/ETH_Calender.nuspec
+++ b/ETH_Calender.nuspec
@@ -2,17 +2,17 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>$version$</version>
-    <title>title_2</title>
-    <authors>author</authors>
-    <owners>author</owners>
+    <version>1.0.0.0</version>
+    <title>Amharic Calender</title>
+    <authors>Edge</authors>
+    <owners>Edge</owners>
     <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
     <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
     <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>description</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
+    <description>Ethiopian calender </description>
+    
     <copyright>Copyright 2013</copyright>
-    <tags>Tag1 Tag2</tags>
+   
   </metadata>
 </package>
