--- a/EthCal/EthCal.nuspec
+++ b/EthCal/EthCal.nuspec
@@ -2,17 +2,17 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>1.0.0.0</version>
-    <title>Amharic Calender</title>
-    <authors>Edge</authors>
-    <owners>Edge</owners>
+    <version>$version$</version>
+    <title>$title$</title>
+    <authors>$author$</authors>
+    <owners>$author$</owners>
     <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
     <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
     <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Ethiopian calender </description>
-    
+    <description>Ethiopian Calendar - new </description>
+    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
     <copyright>Copyright 2013</copyright>
-   
+    <tags>Tag1 Tag2</tags>
   </metadata>
 </package>
